--- a/notebooks/02_data_cleaning.ipynb
+++ b/notebooks/02_data_cleaning.ipynb
@@ -2,40 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "import sys\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
     "from src.analysis.utils import show_display_fuction\n",
-    "\n",
-    "\n"
+    "from src.analysis.data_cleaning import drop_columns\n",
+    "output_folder = r\"C:\\Users\\elian\\Work!\\Covid-19_analysis\\data\\processed\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = show_display_fuction(r\"C:\\Users\\elian\\Work!\\Covid-19_analysis\\data\\raw\\covid_data\\covid_19_clean_complete.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First rows of the data set:\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -155,64 +140,116 @@
        "4       0          0       0                 Africa  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"First rows of the data set:\")\n",
-    "(df.head())"
+    "df = show_display_fuction(r\"C:\\Users\\elian\\Work!\\Covid-19_analysis\\data\\raw\\covid_data\\covid_19_clean_complete.csv\")\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = drop_columns(df, ['Province/State'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names_col = [\"Country\", \"Latitude\", \"Longitude\", \"Date\", \"Positives\",\"Deaths\",\"Recovered\",\"Active\", \"Region\"]\n",
+    "df.columns = names_col\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Date\"] = pd.to_datetime(df[\"Date\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Region\"] = df[\"Region\"].astype(\"category\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Country\"] = df[\"Country\"].str.strip()\n",
+    "df[\"Country\"] = df[\"Country\"].str.lower()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "General information:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 49068 entries, 0 to 49067\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   Province/State  14664 non-null  object \n",
-      " 1   Country/Region  49068 non-null  object \n",
-      " 2   Lat             49068 non-null  float64\n",
-      " 3   Long            49068 non-null  float64\n",
-      " 4   Date            49068 non-null  object \n",
-      " 5   Confirmed       49068 non-null  int64  \n",
-      " 6   Deaths          49068 non-null  int64  \n",
-      " 7   Recovered       49068 non-null  int64  \n",
-      " 8   Active          49068 non-null  int64  \n",
-      " 9   WHO Region      49068 non-null  object \n",
-      "dtypes: float64(2), int64(4), object(4)\n",
-      "memory usage: 3.7+ MB\n"
+      "Data columns (total 9 columns):\n",
+      " #   Column     Non-Null Count  Dtype         \n",
+      "---  ------     --------------  -----         \n",
+      " 0   Country    49068 non-null  object        \n",
+      " 1   Latitude   49068 non-null  float64       \n",
+      " 2   Longitude  49068 non-null  float64       \n",
+      " 3   Date       49068 non-null  datetime64[ns]\n",
+      " 4   Positives  49068 non-null  int64         \n",
+      " 5   Deaths     49068 non-null  int64         \n",
+      " 6   Recovered  49068 non-null  int64         \n",
+      " 7   Active     49068 non-null  int64         \n",
+      " 8   Region     49068 non-null  category      \n",
+      "dtypes: category(1), datetime64[ns](1), float64(2), int64(4), object(1)\n",
+      "memory usage: 3.0+ MB\n"
      ]
     }
    ],
    "source": [
-    "print(\"General information:\")\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame saved in: C:\\Users\\elian\\Work!\\Covid-19_analysis\\data\\processed\\cleaning_data_covid.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "output_path = os.path.join(output_folder, \"cleaning_data_covid.pkl\")\n",
+    "df.to_pickle(output_path)\n",
+    "print(f\"DataFrame saved in: {output_path}\")\n"
+   ]
   }
  ],
  "metadata": {
